--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,82 @@
 @media (min-width: 480px) {
 }
+
+
+/*containers*/
+div.mainmenucontainer, div.registeredaddresscontainer {
+    height:fit-content;
+    width:fit-content;
+    float:left;
+    width:30%;
+    border-color: #000000;
+    border-width: 1px;
+}
+/* div.bottomfooter {
+    border-style: solid;
+    outline-color: #000000;
+    height: 500px;
+    width: 500px;
+} 
+*/
+/*background colour*/
+div.greybox {
+    height:800px;
+    width:auto;
+    background-color:#d6d6d6;
+    padding-top: 70px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    color:#d6d6d6;
+    border-width: 2px;
+    border-color: #000000;
+    border-style: solid;
+    outline-color:black;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+/*headings*/
+h1.joinourmailinglist, h1.mainmenu {
+    font-family: 'Calibri', Times, serif;
+    color: #000000;
+    max-width: 325px;
+    font-size: 20px;
+}
+h1.registeredaddress {
+    font-family: 'Calibri', Times, serif;
+    color: #000000;
+    max-width: 325px;
+    font-size: 20px;   
+}
+/*plain text*/
+p.maintext {
+    font-family: 'Calibri', Times, serif;
+    color: #000000;
+    max-width: 325px;
+    font-size: 20px;
+    padding-bottom:10px;
+}
+/*lists*/
+ul, li {
+    font-family: 'Calibri', Times, serif;
+    color: #000000;
+    max-width: 325px;
+    font-size: 20px;
+    float:left;
+    padding-left: 0px;
+}
+/*forms and labels*/
+label.emailaddresstext, label.firstnametext, label.surnametext {
+    font-family: 'Calibri', Times, serif;
+    color:black
+}
+form.emailaddressform, form.firstnameform, form.surnameform {
+    float:left;
+    width: 30%;
+}
+
+
+/*End of CSS*/
